--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/sprites/Players/Player_1.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -31,11 +31,12 @@ dock_3="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray()
-current_scene=""
-center_split_offset=0
+open_scenes=PackedStringArray("res://scenes/units/unit.tscn", "res://scenes/units/players/player.tscn")
+current_scene="res://scenes/units/unit.tscn"
+center_split_offset=-686
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=4
 
 [EditorWindow]
 
@@ -45,8 +46,8 @@ position=Vector2i(0, 34)
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://scenes/units/unit.gd"]
+selected_script="res://scenes/units/unit.gd"
 open_help=[]
 script_split_offset=300
 list_split_offset=0
