--- a/yolk-survivors/.godot/global_script_class_cache.cfg
+++ b/yolk-survivors/.godot/global_script_class_cache.cfg
@@ -1,1 +1,9 @@
-list=[]
+list=[{
+"base": &"Area2D",
+"class": &"Unit",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/units/unit.gd"
+}]
