--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/sprites/Players/Player_1.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/units/players/player_well_rounded.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/units/", "res://scenes/units/players/", "res://assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -31,11 +31,11 @@ dock_3="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/units/unit.tscn", "res://scenes/units/players/player.tscn")
-current_scene="res://scenes/units/unit.tscn"
+open_scenes=PackedStringArray("res://scenes/units/unit.tscn", "res://scenes/units/players/player_well_rounded.tscn")
+current_scene="res://scenes/units/players/player_well_rounded.tscn"
 center_split_offset=-686
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=4
 
 [EditorWindow]
@@ -46,8 +46,8 @@ position=Vector2i(0, 34)
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/units/unit.gd"]
-selected_script="res://scenes/units/unit.gd"
+open_scripts=["res://scenes/units/players/player.gd", "res://scenes/units/unit.gd"]
+selected_script="res://scenes/units/players/player.gd"
 open_help=[]
 script_split_offset=300
 list_split_offset=0
@@ -55,8 +55,8 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 0, 0, 0)
-floating_window_screen=-1
+floating_window_rect=Rect2i(951, 442, 1938, 1151)
+floating_window_screen=0
 
 [ShaderEditor]
 
