--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -1,6 +1,6 @@
 [docks]
 
-dock_3_selected_tab_idx=0
+dock_3_selected_tab_idx=1
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
@@ -35,8 +35,8 @@ open_scenes=PackedStringArray("res://scenes/units/unit.tscn", "res://scenes/unit
 current_scene="res://scenes/units/players/player_well_rounded.tscn"
 center_split_offset=-686
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=4
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -46,7 +46,7 @@ position=Vector2i(0, 34)
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/units/players/player.gd", "res://scenes/units/unit.gd"]
+open_scripts=["res://scenes/units/unit.gd", "res://scenes/units/players/player.gd"]
 selected_script="res://scenes/units/players/player.gd"
 open_help=[]
 script_split_offset=300
