--- a/yolk-survivors/.godot/editor/script_editor_cache.cfg
+++ b/yolk-survivors/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,15 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
-"scroll_position": 0.0,
-"selection": false,
+"row": 47,
+"scroll_position": 42.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 47,
+"selection_to_column": 33,
+"selection_to_line": 48,
 "syntax_highlighter": "GDScript"
 }
