--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -1,6 +1,6 @@
 [docks]
 
-dock_3_selected_tab_idx=1
+dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/units/players/player_well_rounded.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/units/", "res://scenes/units/players/", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://resources/units/players/player_well_rounded.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/units/", "res://scenes/units/players/", "res://resources/", "res://resources/units/", "res://resources/units/players/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -46,7 +46,7 @@ position=Vector2i(0, 34)
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/units/unit.gd", "res://scenes/units/players/player.gd"]
+open_scripts=["res://scenes/units/players/player.gd", "res://scenes/units/unit.gd", "res://resources/unit_stats.gd"]
 selected_script="res://scenes/units/players/player.gd"
 open_help=[]
 script_split_offset=300
