--- a/yolk-survivors/.godot/global_script_class_cache.cfg
+++ b/yolk-survivors/.godot/global_script_class_cache.cfg
@@ -14,4 +14,12 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://scenes/units/unit.gd"
+}, {
+"base": &"Resource",
+"class": &"UnitStats",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://resources/unit_stats.gd"
 }]
