--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=274
-dock_hsplit_2=270
+dock_hsplit_2=336
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
@@ -35,7 +35,7 @@ open_scenes=PackedStringArray("res://scenes/units/unit.tscn", "res://scenes/unit
 current_scene="res://scenes/units/players/player_well_rounded.tscn"
 center_split_offset=-686
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -46,8 +46,8 @@ position=Vector2i(0, 34)
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/units/players/player.gd", "res://scenes/units/unit.gd", "res://resources/unit_stats.gd"]
-selected_script="res://scenes/units/players/player.gd"
+open_scripts=["res://scenes/units/players/player.gd", "res://scenes/units/players/player_trail.gd", "res://scenes/units/unit.gd", "res://resources/unit_stats.gd"]
+selected_script="res://scenes/units/players/player_trail.gd"
 open_help=[]
 script_split_offset=300
 list_split_offset=0
