--- a/yolk-survivors/.godot/global_script_class_cache.cfg
+++ b/yolk-survivors/.godot/global_script_class_cache.cfg
@@ -7,6 +7,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://scenes/units/players/player.gd"
 }, {
+"base": &"Line2D",
+"class": &"PlayerTrail",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/units/players/player_trail.gd"
+}, {
 "base": &"Area2D",
 "class": &"Unit",
 "icon": "",
