Adding New Characters

--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://resources/units/players/player_well_rounded.tres")
+dock_filesystem_selected_paths=PackedStringArray("res://resources/units/players/player_brawler.tres")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/units/", "res://scenes/units/players/", "res://resources/", "res://resources/units/", "res://resources/units/players/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -31,8 +31,8 @@ dock_3="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/units/unit.tscn", "res://scenes/units/players/player_well_rounded.tscn")
-current_scene="res://scenes/units/players/player_well_rounded.tscn"
+open_scenes=PackedStringArray("res://scenes/units/unit.tscn", "res://scenes/units/players/player_well_rounded.tscn", "res://scenes/units/players/player_crazy.tscn", "res://scenes/units/players/player_bunny.tscn", "res://scenes/units/players/player_brawler.tscn", "res://scenes/units/players/player_knight.tscn")
+current_scene="res://scenes/units/players/player_knight.tscn"
 center_split_offset=-686
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
