--- a/yolk-survivors/.godot/editor/quick_open_dialog_cache.cfg
+++ b/yolk-survivors/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,3 +1,4 @@
 [selected_history]
 
 Texture2D=PackedStringArray("uid://bt0lww88864ws", "uid://dpxw8tsbgrfse", "uid://dmox6e28kf6ax", "uid://dq63ocnu3lset", "uid://cproxhccob85g", "uid://devt2xbk78rej")
+UnitStats=PackedStringArray("uid://dgqorm6wrih3t")
