--- a/yolk-survivors/.godot/global_script_class_cache.cfg
+++ b/yolk-survivors/.godot/global_script_class_cache.cfg
@@ -8,6 +8,14 @@ list=[{
 "path": "res://scenes/arena/arena.gd"
 }, {
 "base": &"Unit",
+"class": &"Enemy",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/units/enemies/enemy.gd"
+}, {
+"base": &"Unit",
 "class": &"Player",
 "icon": "",
 "is_abstract": false,
