--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://autoload/global.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/units/", "res://scenes/units/players/", "res://resources/", "res://resources/units/", "res://resources/units/players/", "res://autoload/")
+dock_filesystem_selected_paths=PackedStringArray("res://resources/units/enemies/stats_enemy_chaser_slow.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/units/", "res://scenes/units/players/", "res://scenes/units/enemies/", "res://resources/", "res://resources/units/", "res://resources/units/enemies/", "res://autoload/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -19,7 +19,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=274
-dock_hsplit_2=336
+dock_hsplit_2=359
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_1_selected_tab_idx=0
@@ -31,11 +31,11 @@ dock_3="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/arena/arena.tscn", "res://scenes/units/unit.tscn", "res://scenes/units/players/player_well_rounded.tscn", "res://scenes/units/players/player_crazy.tscn", "res://scenes/units/players/player_bunny.tscn", "res://scenes/units/players/player_brawler.tscn", "res://scenes/units/players/player_knight.tscn")
-current_scene="res://scenes/units/unit.tscn"
+open_scenes=PackedStringArray("res://scenes/arena/arena.tscn", "res://scenes/units/unit.tscn", "res://scenes/units/players/player_well_rounded.tscn", "res://scenes/units/players/player_crazy.tscn", "res://scenes/units/players/player_bunny.tscn", "res://scenes/units/players/player_brawler.tscn", "res://scenes/units/players/player_knight.tscn", "res://scenes/units/enemies/enemy_chaser.tscn", "res://scenes/units/enemies/enemy_chaser_mid.tscn", "res://scenes/units/enemies/enemy_chaser_fast.tscn", "res://scenes/units/enemies/enemy_charger.tscn", "res://scenes/units/enemies/enemy_shooter.tscn")
+current_scene="res://scenes/units/enemies/enemy_shooter.tscn"
 center_split_offset=-686
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=4
 
 [EditorWindow]
@@ -46,8 +46,8 @@ position=Vector2i(0, 34)
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/arena/arena.gd", "res://scenes/arena/camera_2d.gd", "res://autoload/global.gd", "res://scenes/units/players/player.gd", "res://scenes/units/players/player_trail.gd", "res://scenes/units/unit.gd", "res://resources/unit_stats.gd"]
-selected_script="res://scenes/arena/camera_2d.gd"
+open_scripts=["res://scenes/arena/arena.gd", "res://scenes/arena/camera_2d.gd", "res://scenes/units/enemies/enemy.gd", "res://autoload/global.gd", "res://scenes/units/players/player.gd", "res://scenes/units/players/player_trail.gd", "res://scenes/units/unit.gd", "res://resources/unit_stats.gd"]
+selected_script="res://scenes/units/enemies/enemy.gd"
 open_help=[]
 script_split_offset=300
 list_split_offset=0
