--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -32,11 +32,11 @@ dock_3="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/arena/arena.tscn", "res://scenes/units/unit.tscn", "res://scenes/units/players/player_well_rounded.tscn", "res://scenes/units/players/player_crazy.tscn", "res://scenes/units/players/player_bunny.tscn", "res://scenes/units/players/player_brawler.tscn", "res://scenes/units/players/player_knight.tscn", "res://scenes/units/enemies/enemy_chaser.tscn", "res://scenes/units/enemies/enemy_chaser_mid.tscn", "res://scenes/units/enemies/enemy_chaser_fast.tscn", "res://scenes/units/enemies/enemy_charger.tscn", "res://scenes/units/enemies/enemy_shooter.tscn")
-current_scene="res://scenes/units/enemies/enemy_shooter.tscn"
+current_scene="res://scenes/arena/arena.tscn"
 center_split_offset=-686
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=4
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
