--- a/yolk-survivors/.godot/editor/quick_open_dialog_cache.cfg
+++ b/yolk-survivors/.godot/editor/quick_open_dialog_cache.cfg
@@ -2,4 +2,4 @@
 
 Texture2D=PackedStringArray("uid://4mllmwdfhmce", "uid://emsi6ifyt0vf", "uid://c6vplmpl4q4jr", "uid://bf4ls8ho3cuqa", "uid://d1ou504pylric", "uid://ov4fmsbglo55", "uid://cy4xfx762bxgb", "uid://bt0lww88864ws", "uid://dpxw8tsbgrfse", "uid://dmox6e28kf6ax", "uid://dq63ocnu3lset", "uid://cproxhccob85g", "uid://devt2xbk78rej")
 UnitStats=PackedStringArray("uid://ceadrrvkl68an", "uid://b4044jccypcut", "uid://chfolf8npwgrh", "uid://c1h3b5i0wcw72", "uid://dgqorm6wrih3t")
-PackedScene=PackedStringArray("uid://bgbxwl6vgfu5u")
+PackedScene=PackedStringArray("uid://wjxii7k20fpj", "uid://bgbxwl6vgfu5u")
