--- a/yolk-survivors/.godot/global_script_class_cache.cfg
+++ b/yolk-survivors/.godot/global_script_class_cache.cfg
@@ -15,6 +15,22 @@ list=[{
 "language": &"GDScript",
 "path": "res://scenes/units/enemies/enemy.gd"
 }, {
+"base": &"Area2D",
+"class": &"HitboxComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/components/hitbox_component.gd"
+}, {
+"base": &"Area2D",
+"class": &"HurtboxComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/components/hurtbox_component.gd"
+}, {
 "base": &"Unit",
 "class": &"Player",
 "icon": "",
