Adding HealthBar and HitShader

--- a/yolk-survivors/.godot/global_script_class_cache.cfg
+++ b/yolk-survivors/.godot/global_script_class_cache.cfg
@@ -15,6 +15,22 @@ list=[{
 "language": &"GDScript",
 "path": "res://scenes/units/enemies/enemy.gd"
 }, {
+"base": &"Control",
+"class": &"HealthBar",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/health_bar/health_bar.gd"
+}, {
+"base": &"Node",
+"class": &"HealthComponent",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/components/health_component.gd"
+}, {
 "base": &"Area2D",
 "class": &"HitboxComponent",
 "icon": "",
