--- a/yolk-survivors/.godot/editor/script_editor_cache.cfg
+++ b/yolk-survivors/.godot/editor/script_editor_cache.cfg
@@ -3,10 +3,10 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 21,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 22,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 15,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 25,
-"scroll_position": 24.0,
+"row": 13,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 37,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 3.0,
+"row": 9,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -64,11 +64,7 @@ state={
 "h_scroll_position": 0,
 "row": 5,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 49,
-"selection_from_line": 4,
-"selection_to_column": 0,
-"selection_to_line": 5,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -77,10 +73,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
+"row": 5,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -137,6 +133,34 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 11,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/components/health_component.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 11,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/health_bar/health_bar.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 70,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 13,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
