adding animated text

--- a/yolk-survivors/.godot/global_script_class_cache.cfg
+++ b/yolk-survivors/.godot/global_script_class_cache.cfg
@@ -15,6 +15,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://scenes/units/enemies/enemy.gd"
 }, {
+"base": &"Node2D",
+"class": &"FloatingText",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/ui/floating_text/floating_text.gd"
+}, {
 "base": &"Control",
 "class": &"HealthBar",
 "icon": "",
@@ -47,6 +55,22 @@ list=[{
 "language": &"GDScript",
 "path": "res://scenes/components/hurtbox_component.gd"
 }, {
+"base": &"Resource",
+"class": &"ItemBase",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://resources/items/item_base.gd"
+}, {
+"base": &"ItemBase",
+"class": &"ItemWeapon",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://resources/items/weapons/item_weapon.gd"
+}, {
 "base": &"Unit",
 "class": &"Player",
 "icon": "",
@@ -78,4 +102,12 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://resources/unit_stats.gd"
+}, {
+"base": &"Resource",
+"class": &"WeaponStats",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://resources/items/weapons/weapon_stats.gd"
 }]
