--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -1,6 +1,6 @@
 [docks]
 
-dock_3_selected_tab_idx=1
+dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://effects/flash_material.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/units/", "res://scenes/units/players/", "res://scenes/units/enemies/", "res://resources/", "res://resources/units/", "res://resources/units/enemies/", "res://effects/", "res://autoload/")
+dock_filesystem_selected_paths=PackedStringArray("res://resources/items/weapons/weapon_stats.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/units/", "res://scenes/units/players/", "res://scenes/units/enemies/", "res://scenes/ui/", "res://scenes/ui/floating_text/", "res://resources/", "res://resources/units/players/", "res://resources/units/enemies/", "res://resources/items/", "res://resources/items/weapons/", "res://effects/", "res://autoload/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -31,12 +31,12 @@ dock_3="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/components/hitbox_component.tscn", "res://scenes/components/hurtbox_component.tscn", "res://scenes/arena/arena.tscn", "res://scenes/units/players/player_well_rounded.tscn", "res://scenes/units/enemies/enemy_chaser.tscn", "res://scenes/units/unit.tscn", "res://scenes/components/health_component.tscn", "res://scenes/units/players/player_bunny.tscn", "res://scenes/health_bar/health_bar.tscn")
-current_scene="res://scenes/units/unit.tscn"
+open_scenes=PackedStringArray("res://scenes/components/hitbox_component.tscn", "res://scenes/components/hurtbox_component.tscn", "res://scenes/arena/arena.tscn", "res://scenes/units/players/player_well_rounded.tscn", "res://scenes/units/enemies/enemy_chaser.tscn", "res://scenes/units/unit.tscn", "res://scenes/components/health_component.tscn", "res://scenes/units/players/player_bunny.tscn", "res://scenes/health_bar/health_bar.tscn", "res://scenes/ui/floating_text/floating_text.tscn")
+current_scene="res://scenes/units/enemies/enemy_chaser.tscn"
 center_split_offset=-686
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=7
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -46,8 +46,8 @@ position=Vector2i(0, 34)
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/arena/arena.gd", "res://scenes/arena/camera_2d.gd", "res://scenes/units/enemies/enemy.gd", "res://autoload/global.gd", "res://scenes/health_bar/health_bar.gd", "res://scenes/components/health_component.gd", "res://scenes/components/hitbox_component.gd", "res://scenes/components/hurtbox_component.gd", "res://scenes/units/players/player.gd", "res://scenes/units/players/player_trail.gd", "res://scenes/units/unit.gd", "res://resources/unit_stats.gd"]
-selected_script="res://scenes/units/unit.gd"
+open_scripts=["res://scenes/arena/arena.gd", "res://scenes/arena/camera_2d.gd", "res://scenes/units/enemies/enemy.gd", "res://scenes/ui/floating_text/floating_text.gd", "res://autoload/global.gd", "res://scenes/health_bar/health_bar.gd", "res://scenes/components/health_component.gd", "res://scenes/components/hitbox_component.gd", "res://scenes/components/hurtbox_component.gd", "res://resources/items/item_base.gd", "res://resources/items/weapons/item_weapon.gd", "res://scenes/units/players/player.gd", "res://scenes/units/players/player_trail.gd", "res://scenes/units/unit.gd", "res://resources/unit_stats.gd", "res://resources/items/weapons/weapon_stats.gd"]
+selected_script="res://resources/items/weapons/weapon_stats.gd"
 open_help=[]
 script_split_offset=300
 list_split_offset=0
