Weapon System, stats

--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://resources/items/weapons/weapon_stats.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/units/", "res://scenes/units/players/", "res://scenes/units/enemies/", "res://scenes/ui/", "res://scenes/ui/floating_text/", "res://resources/", "res://resources/units/players/", "res://resources/units/enemies/", "res://resources/items/", "res://resources/items/weapons/", "res://effects/", "res://autoload/")
+dock_filesystem_selected_paths=PackedStringArray("res://resources/items/weapons/melee/punch/stats_punch_4.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/units/", "res://scenes/units/players/", "res://scenes/units/enemies/", "res://scenes/ui/", "res://scenes/ui/floating_text/", "res://resources/", "res://resources/units/players/", "res://resources/units/enemies/", "res://resources/items/", "res://resources/items/weapons/", "res://resources/items/weapons/melee/", "res://resources/items/weapons/melee/punch/", "res://effects/", "res://autoload/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
