--- a/yolk-survivors/.godot/editor/quick_open_dialog_cache.cfg
+++ b/yolk-survivors/.godot/editor/quick_open_dialog_cache.cfg
@@ -1,5 +1,5 @@
 [selected_history]
 
-Texture2D=PackedStringArray("uid://cyh23wqn8vcac", "uid://cproxhccob85g", "uid://4mllmwdfhmce", "uid://emsi6ifyt0vf", "uid://c6vplmpl4q4jr", "uid://bf4ls8ho3cuqa", "uid://d1ou504pylric", "uid://ov4fmsbglo55", "uid://cy4xfx762bxgb", "uid://bt0lww88864ws", "uid://dpxw8tsbgrfse", "uid://dmox6e28kf6ax", "uid://dq63ocnu3lset", "uid://devt2xbk78rej")
+Texture2D=PackedStringArray("uid://l5hst1cf27oo", "uid://cyh23wqn8vcac", "uid://cproxhccob85g", "uid://4mllmwdfhmce", "uid://emsi6ifyt0vf", "uid://c6vplmpl4q4jr", "uid://bf4ls8ho3cuqa", "uid://d1ou504pylric", "uid://ov4fmsbglo55", "uid://cy4xfx762bxgb", "uid://bt0lww88864ws", "uid://dpxw8tsbgrfse", "uid://dmox6e28kf6ax", "uid://dq63ocnu3lset", "uid://devt2xbk78rej")
 UnitStats=PackedStringArray("uid://ceadrrvkl68an", "uid://b4044jccypcut", "uid://chfolf8npwgrh", "uid://c1h3b5i0wcw72", "uid://dgqorm6wrih3t")
-PackedScene=PackedStringArray("uid://b7s61o2yewfch", "uid://ds2epd1f14mtm", "uid://r6747ur24mnc", "uid://d18p1knfamgj0", "uid://di74owda5affs", "uid://wjxii7k20fpj", "uid://bgbxwl6vgfu5u", "uid://dy6m2b3eopxya")
+PackedScene=PackedStringArray("uid://d18p1knfamgj0", "uid://b7s61o2yewfch", "uid://ds2epd1f14mtm", "uid://r6747ur24mnc", "uid://di74owda5affs", "uid://wjxii7k20fpj", "uid://bgbxwl6vgfu5u", "uid://dy6m2b3eopxya")
