--- a/yolk-survivors/.godot/global_script_class_cache.cfg
+++ b/yolk-survivors/.godot/global_script_class_cache.cfg
@@ -103,6 +103,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://resources/unit_stats.gd"
 }, {
+"base": &"Node2D",
+"class": &"Weapon",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/weapons/weapon.gd"
+}, {
 "base": &"Resource",
 "class": &"WeaponStats",
 "icon": "",
