--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -1,6 +1,6 @@
 [docks]
 
-dock_3_selected_tab_idx=0
+dock_3_selected_tab_idx=1
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
@@ -31,8 +31,8 @@ dock_3="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/components/hitbox_component.tscn", "res://scenes/components/hurtbox_component.tscn", "res://scenes/arena/arena.tscn", "res://scenes/units/players/player_well_rounded.tscn", "res://scenes/units/enemies/enemy_chaser.tscn", "res://scenes/units/unit.tscn", "res://scenes/components/health_component.tscn", "res://scenes/units/players/player_bunny.tscn", "res://scenes/health_bar/health_bar.tscn", "res://scenes/ui/floating_text/floating_text.tscn")
-current_scene="res://scenes/units/enemies/enemy_chaser.tscn"
+open_scenes=PackedStringArray("res://scenes/components/hitbox_component.tscn", "res://scenes/components/hurtbox_component.tscn", "res://scenes/arena/arena.tscn", "res://scenes/units/players/player_well_rounded.tscn", "res://scenes/units/enemies/enemy_chaser.tscn", "res://scenes/units/unit.tscn", "res://scenes/components/health_component.tscn", "res://scenes/units/players/player_bunny.tscn", "res://scenes/health_bar/health_bar.tscn", "res://scenes/ui/floating_text/floating_text.tscn", "res://scenes/weapons/weapon_base.tscn", "res://scenes/weapons/melee/weapon_punch.tscn")
+current_scene="res://scenes/weapons/weapon_base.tscn"
 center_split_offset=-686
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
@@ -46,8 +46,8 @@ position=Vector2i(0, 34)
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/arena/arena.gd", "res://scenes/arena/camera_2d.gd", "res://scenes/units/enemies/enemy.gd", "res://scenes/ui/floating_text/floating_text.gd", "res://autoload/global.gd", "res://scenes/health_bar/health_bar.gd", "res://scenes/components/health_component.gd", "res://scenes/components/hitbox_component.gd", "res://scenes/components/hurtbox_component.gd", "res://resources/items/item_base.gd", "res://resources/items/weapons/item_weapon.gd", "res://scenes/units/players/player.gd", "res://scenes/units/players/player_trail.gd", "res://scenes/units/unit.gd", "res://resources/unit_stats.gd", "res://resources/items/weapons/weapon_stats.gd"]
-selected_script="res://resources/items/weapons/weapon_stats.gd"
+open_scripts=["res://scenes/arena/arena.gd", "res://scenes/arena/camera_2d.gd", "res://scenes/units/enemies/enemy.gd", "res://scenes/ui/floating_text/floating_text.gd", "res://autoload/global.gd", "res://scenes/health_bar/health_bar.gd", "res://scenes/components/health_component.gd", "res://scenes/components/hitbox_component.gd", "res://scenes/components/hurtbox_component.gd", "res://resources/items/item_base.gd", "res://resources/items/weapons/item_weapon.gd", "res://scenes/units/players/player.gd", "res://scenes/units/players/player_trail.gd", "res://scenes/units/unit.gd", "res://resources/unit_stats.gd", "res://scenes/weapons/weapon.gd", "res://resources/items/weapons/weapon_stats.gd"]
+selected_script="res://scenes/weapons/weapon.gd"
 open_help=[]
 script_split_offset=300
 list_split_offset=0
