--- a/yolk-survivors/.godot/global_script_class_cache.cfg
+++ b/yolk-survivors/.godot/global_script_class_cache.cfg
@@ -118,4 +118,12 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://resources/items/weapons/weapon_stats.gd"
+}, {
+"base": &"Node2D",
+"class": &"WeaponsContainer",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/units/players/weapons_container.gd"
 }]
