--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -47,7 +47,7 @@ position=Vector2i(0, 34)
 [ScriptEditor]
 
 open_scripts=["res://scenes/arena/arena.gd", "res://scenes/arena/camera_2d.gd", "res://scenes/units/enemies/enemy.gd", "res://scenes/ui/floating_text/floating_text.gd", "res://autoload/global.gd", "res://scenes/health_bar/health_bar.gd", "res://scenes/components/health_component.gd", "res://scenes/components/hitbox_component.gd", "res://scenes/components/hurtbox_component.gd", "res://resources/items/item_base.gd", "res://resources/items/weapons/item_weapon.gd", "res://scenes/units/players/player.gd", "res://scenes/units/players/player_trail.gd", "res://scenes/units/unit.gd", "res://resources/unit_stats.gd", "res://scenes/weapons/weapon.gd", "res://scenes/units/players/weapons_container.gd", "res://resources/items/weapons/weapon_stats.gd"]
-selected_script="res://scenes/units/players/player.gd"
+selected_script="res://scenes/weapons/weapon.gd"
 open_help=[]
 script_split_offset=300
 list_split_offset=0
@@ -64,3 +64,13 @@ open_shaders=["res://effects/flash.gdshader"]
 split_offset=300
 selected_shader="res://effects/flash.gdshader"
 text_shader_zoom_factor=1.0
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
