--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://resources/items/weapons/melee/punch/item_punch_1.tres")
+dock_filesystem_selected_paths=PackedStringArray("res://resources/items/weapons/melee/punch/stats_punch_1.tres")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/units/", "res://scenes/units/players/", "res://scenes/units/enemies/", "res://scenes/ui/", "res://scenes/ui/floating_text/", "res://resources/", "res://resources/units/players/", "res://resources/units/enemies/", "res://resources/items/", "res://resources/items/weapons/", "res://resources/items/weapons/melee/", "res://resources/items/weapons/melee/punch/", "res://effects/", "res://autoload/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -35,7 +35,7 @@ open_scenes=PackedStringArray("res://scenes/components/hitbox_component.tscn", "
 current_scene="res://scenes/weapons/melee/weapon_punch.tscn"
 center_split_offset=-686
 selected_default_debugger_tab_idx=1
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -46,8 +46,8 @@ position=Vector2i(0, 34)
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/arena/arena.gd", "res://scenes/arena/camera_2d.gd", "res://scenes/units/enemies/enemy.gd", "res://scenes/ui/floating_text/floating_text.gd", "res://autoload/global.gd", "res://scenes/health_bar/health_bar.gd", "res://scenes/components/health_component.gd", "res://scenes/components/hitbox_component.gd", "res://scenes/components/hurtbox_component.gd", "res://resources/items/item_base.gd", "res://resources/items/weapons/item_weapon.gd", "res://scenes/units/players/player.gd", "res://scenes/units/players/player_trail.gd", "res://scenes/units/unit.gd", "res://resources/unit_stats.gd", "res://scenes/weapons/weapon.gd", "res://scenes/units/players/weapons_container.gd", "res://resources/items/weapons/weapon_stats.gd"]
-selected_script="res://scenes/weapons/weapon.gd"
+open_scripts=["res://scenes/arena/arena.gd", "res://scenes/arena/camera_2d.gd", "res://scenes/units/enemies/enemy.gd", "res://scenes/ui/floating_text/floating_text.gd", "res://autoload/global.gd", "res://scenes/health_bar/health_bar.gd", "res://scenes/components/health_component.gd", "res://scenes/components/hitbox_component.gd", "res://scenes/components/hurtbox_component.gd", "res://resources/items/item_base.gd", "res://resources/items/weapons/item_weapon.gd", "res://scenes/weapons/melee/melee_behaviour.gd", "res://scenes/units/players/player.gd", "res://scenes/units/players/player_trail.gd", "res://scenes/units/unit.gd", "res://resources/unit_stats.gd", "res://scenes/weapons/weapon.gd", "res://scenes/units/players/weapons_container.gd", "res://scenes/weapons/melee/weapon_behaviour.gd", "res://resources/items/weapons/weapon_stats.gd"]
+selected_script="res://scenes/components/hitbox_component.gd"
 open_help=[]
 script_split_offset=300
 list_split_offset=0
