--- a/yolk-survivors/.godot/global_script_class_cache.cfg
+++ b/yolk-survivors/.godot/global_script_class_cache.cfg
@@ -71,6 +71,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://resources/items/weapons/item_weapon.gd"
 }, {
+"base": &"WeaponBehaviour",
+"class": &"MeleBehaviour",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/weapons/melee/melee_behaviour.gd"
+}, {
 "base": &"Unit",
 "class": &"Player",
 "icon": "",
@@ -110,6 +118,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://scenes/weapons/weapon.gd"
+}, {
+"base": &"Node2D",
+"class": &"WeaponBehaviour",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/weapons/melee/weapon_behaviour.gd"
 }, {
 "base": &"Resource",
 "class": &"WeaponStats",
