Range weapon and projectile base

--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://resources/items/weapons/melee/sword/stats_sword_4.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/weapons/", "res://scenes/weapons/melee/", "res://scenes/units/players/", "res://resources/", "res://resources/items/", "res://resources/items/weapons/", "res://resources/items/weapons/melee/", "res://resources/items/weapons/melee/sword/", "res://assets/sprites/Weapons/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/projectiles/projectile_pistol.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/weapons/", "res://scenes/weapons/melee/", "res://scenes/units/players/", "res://scenes/projectiles/", "res://resources/", "res://resources/items/", "res://resources/items/weapons/", "res://resources/items/weapons/range/", "res://resources/items/weapons/range/pistol/", "res://resources/items/weapons/melee/", "res://assets/sprites/Weapons/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -31,11 +31,11 @@ dock_3="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/components/hitbox_component.tscn", "res://scenes/components/hurtbox_component.tscn", "res://scenes/arena/arena.tscn", "res://scenes/units/players/player_well_rounded.tscn", "res://scenes/units/enemies/enemy_chaser.tscn", "res://scenes/units/unit.tscn", "res://scenes/components/health_component.tscn", "res://scenes/units/players/player_bunny.tscn", "res://scenes/health_bar/health_bar.tscn", "res://scenes/ui/floating_text/floating_text.tscn", "res://scenes/weapons/weapon_base.tscn", "res://scenes/weapons/melee/weapon_punch.tscn", "res://scenes/weapons/melee/weapon_axe.tscn", "res://scenes/weapons/melee/weapon_mace.tscn", "res://scenes/weapons/melee/weapon_sword.tscn", "res://scenes/weapons/melee/weapon_chainsaw.tscn")
-current_scene="res://scenes/weapons/melee/weapon_punch.tscn"
+open_scenes=PackedStringArray("res://scenes/components/hitbox_component.tscn", "res://scenes/components/hurtbox_component.tscn", "res://scenes/arena/arena.tscn", "res://scenes/units/players/player_well_rounded.tscn", "res://scenes/units/enemies/enemy_chaser.tscn", "res://scenes/units/unit.tscn", "res://scenes/components/health_component.tscn", "res://scenes/units/players/player_bunny.tscn", "res://scenes/health_bar/health_bar.tscn", "res://scenes/ui/floating_text/floating_text.tscn", "res://scenes/weapons/weapon_base.tscn", "res://scenes/weapons/melee/weapon_punch.tscn", "res://scenes/weapons/melee/weapon_axe.tscn", "res://scenes/weapons/melee/weapon_mace.tscn", "res://scenes/weapons/melee/weapon_sword.tscn", "res://scenes/weapons/melee/weapon_chainsaw.tscn", "res://scenes/weapons/range/weapon_pistol.tscn", "res://scenes/projectiles/projectile_pistol.tscn")
+current_scene="res://scenes/projectiles/projectile_pistol.tscn"
 center_split_offset=-686
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -46,8 +46,8 @@ position=Vector2i(0, 34)
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/arena/arena.gd", "res://scenes/arena/camera_2d.gd", "res://scenes/units/enemies/enemy.gd", "res://scenes/ui/floating_text/floating_text.gd", "res://autoload/global.gd", "res://scenes/health_bar/health_bar.gd", "res://scenes/components/health_component.gd", "res://scenes/components/hitbox_component.gd", "res://scenes/components/hurtbox_component.gd", "res://resources/items/item_base.gd", "res://resources/items/weapons/item_weapon.gd", "res://scenes/weapons/melee/melee_behaviour.gd", "res://scenes/units/players/player.gd", "res://scenes/units/players/player_trail.gd", "res://scenes/units/unit.gd", "res://resources/unit_stats.gd", "res://scenes/weapons/weapon.gd", "res://scenes/units/players/weapons_container.gd", "res://scenes/weapons/melee/weapon_behaviour.gd", "res://resources/items/weapons/weapon_stats.gd"]
-selected_script="res://scenes/units/players/player.gd"
+open_scripts=["res://scenes/arena/arena.gd", "res://scenes/arena/camera_2d.gd", "res://scenes/units/enemies/enemy.gd", "res://scenes/ui/floating_text/floating_text.gd", "res://autoload/global.gd", "res://scenes/health_bar/health_bar.gd", "res://scenes/components/health_component.gd", "res://scenes/components/hitbox_component.gd", "res://scenes/components/hurtbox_component.gd", "res://resources/items/item_base.gd", "res://resources/items/weapons/item_weapon.gd", "res://scenes/weapons/melee/melee_behaviour.gd", "res://scenes/units/players/player.gd", "res://scenes/units/players/player_trail.gd", "res://scenes/projectiles/projectile.gd", "res://scenes/weapons/range/range_behaviour.gd", "res://scenes/units/unit.gd", "res://resources/unit_stats.gd", "res://scenes/weapons/weapon.gd", "res://scenes/units/players/weapons_container.gd", "res://scenes/weapons/melee/weapon_behaviour.gd", "res://resources/items/weapons/weapon_stats.gd"]
+selected_script="res://scenes/weapons/melee/weapon_behaviour.gd"
 open_help=["Signal"]
 script_split_offset=300
 list_split_offset=0
