--- a/yolk-survivors/.godot/global_script_class_cache.cfg
+++ b/yolk-survivors/.godot/global_script_class_cache.cfg
@@ -95,6 +95,22 @@ list=[{
 "language": &"GDScript",
 "path": "res://scenes/units/players/player_trail.gd"
 }, {
+"base": &"Node2D",
+"class": &"Projectile",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/projectiles/projectile.gd"
+}, {
+"base": &"WeaponBehaviour",
+"class": &"RangeBehaviour",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/weapons/range/range_behaviour.gd"
+}, {
 "base": &"Area2D",
 "class": &"Unit",
 "icon": "",
