--- a/yolk-survivors/.godot/global_script_class_cache.cfg
+++ b/yolk-survivors/.godot/global_script_class_cache.cfg
@@ -143,6 +143,22 @@ list=[{
 "language": &"GDScript",
 "path": "res://resources/unit_stats.gd"
 }, {
+"base": &"Resource",
+"class": &"WaveData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://resources/wave/wave_data.gd"
+}, {
+"base": &"Resource",
+"class": &"WaveUnitData",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://resources/wave/wave_unit_data.gd"
+}, {
 "base": &"Node2D",
 "class": &"Weapon",
 "icon": "",
