hp regen working

--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -31,7 +31,7 @@ dock_3="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/arena/arena.tscn", "res://scenes/ui/stats/stats_container.tscn", "res://scenes/ui/upgrades/upgrade_card.tscn", "res://scenes/ui/upgrades/upgrade_panel.tscn")
+open_scenes=PackedStringArray("res://scenes/arena/arena.tscn", "res://scenes/ui/stats/stats_container.tscn", "res://scenes/ui/upgrades/upgrade_card.tscn", "res://scenes/ui/upgrades/upgrade_panel.tscn", "res://scenes/units/players/player_well_rounded.tscn")
 current_scene="res://scenes/arena/arena.tscn"
 center_split_offset=-686
 selected_default_debugger_tab_idx=0
@@ -50,7 +50,7 @@ open_scripts=["res://scenes/arena/arena.gd", "res://scenes/arena/camera_2d.gd", 
 selected_script="res://scenes/arena/arena.gd"
 open_help=["Signal"]
 script_split_offset=300
-list_split_offset=0
+list_split_offset=-1
 zoom_factor=1.07129
 
 [GameView]
