Shop panel, can shop, can combine weapons

--- a/yolk-survivors/.godot/editor/editor_layout.cfg
+++ b/yolk-survivors/.godot/editor/editor_layout.cfg
@@ -1,6 +1,6 @@
 [docks]
 
-dock_3_selected_tab_idx=0
+dock_3_selected_tab_idx=1
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://styles/common_style.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://styles/", "res://scenes/", "res://scenes/weapons/", "res://scenes/units/players/", "res://scenes/ui/upgrades/", "res://resources/wave/", "res://resources/wave/data/", "res://resources/units/players/", "res://resources/items/", "res://resources/items/weapons/range/", "res://resources/items/weapons/melee/", "res://resources/items/upgrades/", "res://resources/items/upgrades/data/speed/", "res://autoload/", "res://assets/sprites/Weapons/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/ui/shop/item_card.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://styles/", "res://scenes/", "res://scenes/weapons/", "res://scenes/units/players/", "res://scenes/ui/", "res://scenes/ui/upgrades/", "res://scenes/ui/shop/", "res://scenes/coins/", "res://resources/wave/", "res://resources/wave/data/", "res://resources/units/players/", "res://resources/items/", "res://resources/items/weapons/", "res://resources/items/weapons/range/", "res://resources/items/upgrades/data/speed/", "res://assets/sprites/", "res://assets/sprites/Weapons/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -31,8 +31,8 @@ dock_3="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/arena/arena.tscn", "res://scenes/ui/stats/stats_container.tscn", "res://scenes/ui/upgrades/upgrade_card.tscn", "res://scenes/units/players/player_well_rounded.tscn", "res://scenes/ui/upgrades/upgrade_panel.tscn")
-current_scene="res://scenes/ui/upgrades/upgrade_card.tscn"
+open_scenes=PackedStringArray("res://scenes/arena/arena.tscn", "res://scenes/ui/stats/stats_container.tscn", "res://scenes/ui/upgrades/upgrade_card.tscn", "res://scenes/units/players/player_well_rounded.tscn", "res://scenes/ui/upgrades/upgrade_panel.tscn", "res://scenes/ui/shop/shop_card.tscn", "res://scenes/ui/shop/shop_panel.tscn", "res://scenes/ui/coins_bag/coins_bag.tscn", "res://scenes/coins/coins.tscn", "res://scenes/units/enemies/enemy_chaser.tscn", "res://scenes/ui/shop/item_card.tscn")
+current_scene="res://scenes/ui/shop/shop_panel.tscn"
 center_split_offset=-686
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -46,12 +46,12 @@ position=Vector2i(0, 34)
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/arena/arena.gd", "res://scenes/arena/camera_2d.gd", "res://scenes/units/enemies/charge_attack_behaviour.gd", "res://scenes/units/enemies/enemy.gd", "res://scenes/ui/floating_text/floating_text.gd", "res://autoload/global.gd", "res://scenes/health_bar/health_bar.gd", "res://scenes/components/health_component.gd", "res://scenes/components/hitbox_component.gd", "res://scenes/components/hurtbox_component.gd", "res://resources/items/item_base.gd", "res://resources/items/upgrades/item_upgrades.gd", "res://resources/items/weapons/item_weapon.gd", "res://scenes/weapons/melee/melee_behaviour.gd", "res://scenes/units/players/player.gd", "res://scenes/units/players/player_trail.gd", "res://scenes/projectiles/projectile.gd", "res://scenes/weapons/range/range_behaviour.gd", "res://scenes/units/enemies/shooting_behaviour.gd", "res://scenes/arena/spawner.gd", "res://scenes/ui/stats/stats_container.gd", "res://scenes/units/unit.gd", "res://resources/unit_stats.gd", "res://scenes/ui/upgrades/upgrade_card.gd", "res://scenes/ui/upgrades/upgrade_panel.gd", "res://resources/wave/wave_data.gd", "res://resources/wave/wave_unit_data.gd", "res://scenes/weapons/weapon.gd", "res://scenes/units/players/weapons_container.gd", "res://scenes/weapons/melee/weapon_behaviour.gd", "res://resources/items/weapons/weapon_stats.gd"]
-selected_script="res://scenes/weapons/melee/weapon_behaviour.gd"
+open_scripts=["res://scenes/arena/arena.gd", "res://scenes/arena/camera_2d.gd", "res://scenes/units/enemies/charge_attack_behaviour.gd", "res://scenes/coins/coins.gd", "res://coins_bag.gd", "res://scenes/units/enemies/enemy.gd", "res://scenes/ui/floating_text/floating_text.gd", "res://autoload/global.gd", "res://scenes/health_bar/health_bar.gd", "res://scenes/components/health_component.gd", "res://scenes/components/hitbox_component.gd", "res://scenes/components/hurtbox_component.gd", "res://resources/items/item_base.gd", "res://scenes/ui/shop/item_card.gd", "res://resources/items/upgrades/item_upgrades.gd", "res://resources/items/weapons/item_weapon.gd", "res://scenes/weapons/melee/melee_behaviour.gd", "res://scenes/units/players/player.gd", "res://scenes/units/players/player_trail.gd", "res://scenes/projectiles/projectile.gd", "res://scenes/weapons/range/range_behaviour.gd", "res://scenes/units/enemies/shooting_behaviour.gd", "res://scenes/ui/shop/shop_card.gd", "res://scenes/ui/shop/shop_panel.gd", "res://scenes/arena/spawner.gd", "res://scenes/ui/stats/stats_container.gd", "res://scenes/units/unit.gd", "res://resources/unit_stats.gd", "res://scenes/ui/upgrades/upgrade_card.gd", "res://scenes/ui/upgrades/upgrade_panel.gd", "res://resources/wave/wave_data.gd", "res://resources/wave/wave_unit_data.gd", "res://scenes/weapons/weapon.gd", "res://scenes/units/players/weapons_container.gd", "res://scenes/weapons/melee/weapon_behaviour.gd", "res://resources/items/weapons/weapon_stats.gd"]
+selected_script="res://scenes/ui/shop/shop_panel.gd"
 open_help=["Signal"]
 script_split_offset=300
 list_split_offset=-1
-zoom_factor=1.07129
+zoom_factor=0.926944
 
 [GameView]
 
