--- a/yolk-survivors/.godot/global_script_class_cache.cfg
+++ b/yolk-survivors/.godot/global_script_class_cache.cfg
@@ -15,6 +15,22 @@ list=[{
 "language": &"GDScript",
 "path": "res://scenes/units/enemies/charge_attack_behaviour.gd"
 }, {
+"base": &"Area2D",
+"class": &"Coins",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/coins/coins.gd"
+}, {
+"base": &"HBoxContainer",
+"class": &"CoinsBag",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://coins_bag.gd"
+}, {
 "base": &"Unit",
 "class": &"Enemy",
 "icon": "",
@@ -70,6 +86,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://resources/items/item_base.gd"
+}, {
+"base": &"Button",
+"class": &"ItemCard",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/ui/shop/item_card.gd"
 }, {
 "base": &"ItemBase",
 "class": &"ItemUpgrade",
@@ -134,6 +158,22 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://scenes/units/enemies/shooting_behaviour.gd"
+}, {
+"base": &"Panel",
+"class": &"ShopCard",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/ui/shop/shop_card.gd"
+}, {
+"base": &"Panel",
+"class": &"ShopPanel",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/ui/shop/shop_panel.gd"
 }, {
 "base": &"Node2D",
 "class": &"Spawner",
