Start selection panel

--- a/yolk-survivors/.godot/global_script_class_cache.cfg
+++ b/yolk-survivors/.godot/global_script_class_cache.cfg
@@ -96,6 +96,14 @@ list=[{
 "path": "res://scenes/ui/shop/item_card.gd"
 }, {
 "base": &"ItemBase",
+"class": &"ItemPassive",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://resources/items/passives/item_passive.gd"
+}, {
+"base": &"ItemBase",
 "class": &"ItemUpgrade",
 "icon": "",
 "is_abstract": false,
@@ -151,6 +159,22 @@ list=[{
 "language": &"GDScript",
 "path": "res://scenes/weapons/range/range_behaviour.gd"
 }, {
+"base": &"Button",
+"class": &"SelectionCard",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/ui/selection_panel/selection_card.gd"
+}, {
+"base": &"Panel",
+"class": &"SelectionPanel",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/ui/selection_panel/selection_panel.gd"
+}, {
 "base": &"Node2D",
 "class": &"ShootingBehaviour",
 "icon": "",
@@ -174,6 +198,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://scenes/ui/shop/shop_panel.gd"
+}, {
+"base": &"Sprite2D",
+"class": &"SpawnEffect",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scenes/effects/spawn_effect.gd"
 }, {
 "base": &"Node2D",
 "class": &"Spawner",
